[package]
name = "kdeconnect"
version = "0.1.0"
authors = ["Maciek Borzecki <maciek.borzecki@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"]}
