[package]
name = "mconnect"
version = "0.1.0"
authors = ["Maciek Borzecki <maciek.borzecki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdeconnect = { path = "../kdeconnect", version = "" }
log = "0.4"
tempfile = "3.1.0"

[dependencies.glib]
version = ""
features = ["v2_44"]

[dependencies.gio]
version = ""
features = ["v2_44"]
